2009-11-18  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/license.rtf, win32/setup/wix_mutex.pl,
  win32/Makefile: started implementing file associations; GUI improvements


2009-11-16  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: default selection and directories for plugins


2009-11-12  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/license.rtf, win32/Makefile:
  added license to the setup


2009-11-06  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: support upgrades and prevent downgrades


2009-10-28  Piotr Fusik  <fox@scene.pl>
* INSTALL, README, javascript/USAGE, win32/Makefile:
  JavaScript and Flash build and usage instructions


2009-10-06  Piotr Fusik  <fox@scene.pl>
* raw2c.pl, files2anylang.pl, anylang.h, asap.c, Makefile, players/Makefile,
  win32/Makefile, flash/Makefile, javascript/Makefile, javascript/asap.ppjs,
  csharp/Makefile: support native formats in JavaScript and Flash

* anylang.h, asap.c, acpu.c, apokeysnd.c, flash/ASAP.ppas, flash/PokeyState.as,
  flash/ASAP_ModuleInfo.as, flash/Makefile:
  optimized Flash version by declaring more types

* flash/ASAPPlayer.as: support FlashVars


2009-10-02  Piotr Fusik  <fox@scene.pl>
* java/asap_midlet.MF, win32/Makefile: upgraded midlet version number

* README: information about JavaScript, Flash, mmSAP and Rockbox


2009-10-01  Piotr Fusik  <fox@scene.pl>
* acpu.c, apokeysnd.c, asap.c, anylang.h, asap_internal.h, asap.ppjs,
  asap2wav.ppjs: fixes and optimizations for JavaScript

* javascript/asapweb.ppjs, javascript/Makefile, win32/Makefile:
  JavaScript for web browsers (works in Firefox)

* flash/ASAP.ppas, flash/ASAPPlayer.as, flash/ASAP_ModuleInfo.as,
  flash/PokeyState.as, flash/Makefile, anylang.h, asap.c, apokeysnd.c,
  asap_internal.h, win32/Makefile: work on Flash version continued


2009-09-29  Piotr Fusik  <fox@scene.pl>
* flash/ASAP.ppas, flash/ASAPPlayer.as, flash/Makefile, anylang.h, apokeysnd.c,
  asap.c, win32/Makefile: Flash version!

