@@ -1,3 +1,11 @@
+2009-11-25  Piotr Fusik  <fox@scene.pl>
+* win32/setup/asap.wxs, win32/setup/wix_mutex.pl:
+  setting multiple "Associate files" was possible with "Change"
+
+* win32/setup/asap.wxs: file associations didn't appear in Winamp
+  nor Apollo settings
+
+
 2009-11-18  Piotr Fusik  <fox@scene.pl>
 * win32/setup/asap.wxs, win32/setup/license.rtf, win32/setup/wix_mutex.pl,
   win32/Makefile: started implementing file associations; GUI improvements
